--- a/Docker-multi/Dockerfile.alpine
+++ b/Docker-multi/Dockerfile.alpine
@@ -1,5 +1,5 @@
-FROM gcc:latest as builder
-MAINTAINER ehemdal@brandeis.edu
+FROM gcc:15.1.0 as builder
+LABEL MAINTAINER=ehemdal@brandeis.edu
 RUN mkdir /myapp
 COPY ./code/hello.c /myapp
 WORKDIR /myapp
