--- a/Docker-multi/Dockerfile.ubuntu
+++ b/Docker-multi/Dockerfile.ubuntu
@@ -1,10 +1,10 @@
-FROM gcc:latest as builder
-MAINTAINER ehemdal@brandeis.edu
+FROM gcc:15.1.0 as builder
+LABEL MAINTAINER=ehemdal@brandeis.edu
 RUN mkdir /myapp
 COPY ./code/hello.c /myapp
 WORKDIR /myapp
 RUN gcc -static -o myapp hello.c
 
-FROM centos:latest
+FROM ubuntu:latest
 COPY --from=builder /myapp/myapp /myapp
 ENTRYPOINT ./myapp
