--- a/Dockerfile.ppln
+++ b/Dockerfile.ppln
@@ -1,4 +1,4 @@
-FROM eclipse-temurin:21-jre-alpine
+FROM eclipse-temurin:21-jdk
 
 # Install Ant
 RUN apt-get update && apt-get install -y ant && rm -rf /var/lib/apt/lists/*
